What's New for FreeImage

* : fixed
- : removed
! : changed
+ : added

Month day, 2008 - 3.12.0
* [Carsten Klein] FreeImage_Copy now copies transparency info, resolution info, ICC profile and metadata
* [Carsten Klein] check for negative top/left values in FreeImage_Paste

July 28th, 2008 - 3.11.0
! FreeImage now uses libTIFF 3.9.0beta (CVS patch 2008-05-24)
! FreeImage now uses OpenJPEG 1.3.0 (SVN patch 2008-05-22)
! FreeImage now uses libMNG 1.0.10
! FreeImage now uses libPNG 1.2.29
+ [Yves Schmid] added 48-bit RGB to 32-bit conversion support in FreeImage_ConvertTo32Bits
+ [Aaron Shumate] added RGB16-to-BITMAP and All-to-RGBF conversion support in FreeImage_ConvertToType
+ [Benjamin English] added a new OpenGL sample to FreeImage/Examples
+ [Lucian Sabo] added new compression flags to the PNG plugin
+ [Lucian Sabo] added new compression flags to the JPEG plugin (chroma subsampling options)
+ [Noam Gat] added support for SGI grayscale + alpha pics to SGI plugin
+ [Herve Drolon] added FreeImage_CloneMetadata
+ [Herve Drolon] added loading support for Windows Vista icons in ICO Plugin
+ [Herve Drolon] added loading and saving support for RGBF images to the TIF plugin (using the LogLuv codec)
* [Will Bryant] fixed makefile for MacOSX Tiger and Leopard
* [Maria Gullickson] fixed a 'divide by 0' error in PNM plugin and FreeImage_Rescale function
* [Yves Schmid] fixed a bug with Exif metadata reading in TIFF images
* [Herve Drolon] fixed some possible 64-bit portability issues with pointer calculations
* [wangyn] fixed a bug with transparency handling of indexed images in PNG plugin
* [Martin Dyring-Andersen] fixed a bug with GIFinfo structure initialization in GIF plugin
* [Noam Gat] fixed a bug in SGI plugin: when the file reports as two-dimensional, the height factor does not get loaded
* [Herve Drolon] added error messages in FreeImage_Load(U) / FreeImage_Save(U) in case of bad filenames