@@ -6,8 +6,10 @@ What's New for FreeImage
 + : added
 
 Month day, 2008 - 3.12.0
+! [Herve Drolon] FreeImage_CloneMetadata no longer clone the FIMD_ANIMATION metadata (this was causing problems when saving to GIF format)
 * [Carsten Klein] FreeImage_Copy now copies transparency info, resolution info, ICC profile and metadata
 * [Carsten Klein] check for negative top/left values in FreeImage_Paste
+
 
 July 28th, 2008 - 3.11.0
 ! FreeImage now uses libTIFF 3.9.0beta (CVS patch 2008-05-24)
